--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
         <div class="home_cuerpo">
 
             <figure>
-                <img src="/img/foto.jpg" alt="">
+                <img src="../img/foto.jpg" alt="">
             </figure>
 
 
