--- a/html/contacto.html
+++ b/html/contacto.html
@@ -18,7 +18,7 @@
 
             <div class="header_nav">
                 <div class="nav_titulo">
-                    <a href="index.html">AB</a>
+                    <a href="../index.html">AB</a>
                 </div>
 
                 <nav class="navegacion">
