--- a/html/principal.html
+++ b/html/principal.html
@@ -21,11 +21,11 @@
 
             <div class="header_nav">
                 <div class="nav_titulo">
-                    <a href="index.html">AB</a>
+                    <a href="../index.html">AB</a>
                 </div>
 
                 <nav class="navegacion">
-                    <a style="color:#ffa700 ;" href="principal.html">Principal </a>
+                    <a style="color:#ffa700 ;" href="#">Principal </a>
                     <a href="acercade.html">Acerca de </a>
                     <a href="contacto.html">Contacto </a>
                 </nav>
