--- a/html/acercade.html
+++ b/html/acercade.html
@@ -21,7 +21,7 @@
 
             <div class="header_nav">
                 <div class="nav_titulo">
-                    <a href="index.html">AB</a>
+                    <a href="../index.html">AB</a>
                 </div>
 
                 <nav class="navegacion">
